change to display: none to avoid that jumping problem #13

--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ td {
 /* Tiles */
 input[type=checkbox] {
   position: absolute;
-  left: -9999px;
+  display: none;
 }
 
 .tile {
